--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
   "rules": {
     "no-case-declarations": 0,
     "react/prop-types": 0,
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "jsx-a11y/alt-text": "warn"
   },
   "settings": {
     "react": {
